--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script src="http://connect.facebook.net/en_US/all.js"></script>
 		<script type="text/javascript">
 			FB.init({
-				appId  : 'APP ID',
+				appId  : '131498680279730',
 			});
 			
 			function echoSize() {
