--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Noteo</title>
-	</head>
 
-	<body style="margin:0; padding:0; border:0; background-color:#222222">
-	
-		<div id="allContent" style="background-color: #444444; height:100%">
-			<div id="output" style="color: #888888;" />
-			</div>
-		
-		<div id="fb-root"></div>
-		<script src="http://connect.facebook.net/en_US/all.js"></script>
-		<script type="text/javascript">
-			FB.init({
-				appId  : '131498680279730',
+<head>
+	<meta charset="UTF-8">
+	<title>Noteo</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<script  type="text/javascript" src="js/script.js"></script>
+</head>
+
+<body>
+	<div id="allContent">
+		<div id="output"></div>
+	</div>
+	<div id="fb-root"></div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$.ajaxSetup({
+				cache: true
 			});
-			
-			function echoSize() {
-				document.getElementById('output').innerHTML =
-					"HTML Content Width: " + window.innerWidth + 
-					" Height: " + window.innerHeight;
+			$.getScript('//connect.facebook.net/en_UK/all.js', function() {
+				FB.init({
+					appId: '131498680279730',
+				});
+
+				function echoSize() {
+					document.getElementById('output').innerHTML =
+						"HTML Content Width: " + window.innerWidth +
+						" Height: " + window.innerHeight;
 					console.log(window.innerWidth + ' x ' + window.innerHeight);
-			}
-			
-			echoSize();
-			window.onresize = echoSize;
-		</script>
-	</body>
+				}
+				echoSize();
+				window.onresize = echoSize;
+				$('#loginbutton,#feedbutton').removeAttr('disabled');
+				FB.getLoginStatus(updateStatusCallback);
+			});
+		});
+	</script>
+</body>
+
 </html>
