--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
 	<div id="allContent">
-		<div id="output"></div>
+		<div id="output" />
 	</div>
 	<div id="fb-root"></div>
+	<div id="loginbutton" disabled ></div>
+	<div id="feedbutton" disabled ></div>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$.ajaxSetup({
